Fixed placeholder issue. Fixed grammer issue. Fixed breakdown/recommendation block width issues if data table is too wide. Added links to URLs within data breakdown to allow users to view reported URL/file. Fixed localization issue under certain translations that would break JavaScript.

--- a/PageSpeed_Page_View.css
+++ b/PageSpeed_Page_View.css
@@ -55,6 +55,7 @@
 .w3tcps_breakdown_items_container {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	grid-row-gap: .75em;
 	grid-column-gap: .75em;
 	padding: .75em;
@@ -62,7 +63,8 @@
 
 .w3tcps_breakdown_items_container .w3tcps_breakdown_items_table,
 .w3tcps_breakdown_items_container .w3tcps_instruction {
-	flex: 50%;
+	flex: 49%;
+	flex-grow: 1;
 	align-self: flex-start;
 	border: 1px solid #ccd0d4;
 	border-collapse: collapse;
